--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,6 +19,12 @@ website:
           href: "In-class_Ex/In-class_Ex02/In-class_Ex02.html"
         - text: "In-classs Exercise 3"
           href: "In-class_Ex/In-class_Ex03/In-class_Ex03.html"
+        - text: "In-classs Exercise 4"
+          href: "In-class_Ex/In-class_Ex04/In-class_Ex04.html"
+    - text: "Take-home Exercise"
+      menu: 
+        - text: "Take-home Exercise 1"
+          href: "Take-home_Ex/Take-home_Ex01/Take-home_Ex01.html"
     right:
       - href: index.qmd
         text: Home
