--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,8 @@ website:
           href: "Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02.html"
         - text: "Hands-on Exercise 3"
           href: "Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03.html"
+        - text: "Hands-on Exercise 4"
+          href: "Hands-on_Ex/Hands-on_Ex04/Hands-on_Ex04.html"
     - text: "In-class Exercise"
       menu: 
         - text: "In-class Exercise 2"
@@ -23,10 +25,14 @@ website:
           href: "In-class_Ex/In-class_Ex04/In-class_Ex04.html"
         - text: "In-classs Exercise 5"
           href: "In-class_Ex/In-class_Ex05/In-class_Ex05.html"
+        - text: "In-classs Exercise 6"
+          href: "In-class_Ex/In-class_Ex06/In-class_Ex06.html"
     - text: "Take-home Exercise"
       menu: 
         - text: "Take-home Exercise 1"
           href: "Take-home_Ex/Take-home_Ex01/Take-home_Ex01.html"
+        - text: "Take-home Exercise 2"
+          href: "Take-home_Ex/Take-home_Ex02/Take-home_Ex02.html"
     right:
       - href: index.qmd
         text: Home
