--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,9 @@ website:
           href: "Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03.html"
         - text: "Hands-on Exercise 4"
           href: "Hands-on_Ex/Hands-on_Ex04/Hands-on_Ex04.html"
+        - text: "Hands-on Exercise 7"
+          href: "Hands-on_Ex/Hands-on_Ex07/Hands-on_Ex07.html"
+          
     - text: "In-class Exercise"
       menu: 
         - text: "In-class Exercise 2"
@@ -27,6 +30,8 @@ website:
           href: "In-class_Ex/In-class_Ex05/In-class_Ex05.html"
         - text: "In-classs Exercise 6"
           href: "In-class_Ex/In-class_Ex06/In-class_Ex06.html"
+        - text: "In-classs Exercise 7"
+          href: "In-class_Ex/In-class_Ex07/In-class_Ex07.html"
     - text: "Take-home Exercise"
       menu: 
         - text: "Take-home Exercise 1"
