--- a/_quarto.yml
+++ b/_quarto.yml
@@ -36,6 +36,8 @@ website:
           href: "In-class_Ex/In-class_Ex06/In-class_Ex06.html"
         - text: "In-classs Exercise 7"
           href: "In-class_Ex/In-class_Ex07/In-class_Ex07.html"
+        - text: "In-classs Exercise 8"
+          href: "In-class_Ex/In-class_Ex08/In-class_Ex08.html"
     - text: "Take-home Exercise"
       menu: 
         - text: "Take-home Exercise 1"
