--- a/_quarto.yml
+++ b/_quarto.yml
@@ -38,12 +38,16 @@ website:
           href: "In-class_Ex/In-class_Ex07/In-class_Ex07.html"
         - text: "In-classs Exercise 8"
           href: "In-class_Ex/In-class_Ex08/In-class_Ex08.html"
+        - text: "In-classs Exercise 9"
+          href: "In-class_Ex/In-class_Ex09/In-class_Ex09.html"
     - text: "Take-home Exercise"
       menu: 
         - text: "Take-home Exercise 1"
           href: "Take-home_Ex/Take-home_Ex01/Take-home_Ex01.html"
         - text: "Take-home Exercise 2"
           href: "Take-home_Ex/Take-home_Ex02/Take-home_Ex02.html"
+        - text: "Take-home Exercise 3"
+          href: "Take-home_Ex/Take-home_Ex03/Take-home_Ex03.html"
     right:
       - href: index.qmd
         text: Home
