--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "IS415"
+  title: "IS415 - Geospatial Applications and Analytics"
   navbar:
     left: 
     - text: "Hands-on Exercise"
